fix word spacing

--- a/app/assets/stylesheets/profile_dark.scss
+++ b/app/assets/stylesheets/profile_dark.scss
@@ -953,6 +953,7 @@ ul.wall-posts {
         font-size: 24px;
         min-height: 40px;
         position: relative;
+        white-space: pre-wrap;
 
         p {
           margin: 26px 0 16px 0;
